# kvs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  store.rs
src/client/: Cargo.toml
src/client/src/: lib.rs  main.rs
src/client/tests/: tests.rs
src/core/: .gitignore  Cargo.toml
src/core/benches/: benches.rs
src/core/src/: engine.rs  error.rs  lib.rs  protocol.rs  sled.rs  store.rs
src/core/tests/: tests.rs
src/server/: Cargo.toml
src/server/src/: lib.rs  main.rs  pool.rs  server.rs
src/server/tests/: tests.rs
tests/: tests.rs
