[package]
name = "kvs"
version = "0.1.0"
authors = ["Carter Green <cartergr@usc.edu>"]
edition = "2018"
description = "A key-value store"
readme = "./README.md"

[dependencies]
bincode = "1.2.1"
clap = "2.33"
serde = { features = ["derive"], version = "1.0" }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
