[package]
name = "kvs"
version = "0.3.0"
authors = ["Carter Green <cartergr@usc.edu>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
serde = { features = ["derive"], version = "1.0" }
slog = "2.5.2"
# Used to compare kvs implementation with established implementation
sled = { version = "0.31.0", optional = true }

[features]
# Allow use of sled for comparitive benchmarks
sled_engine = ["sled"]

[dev-dependencies]
criterion = "0.2.11"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = { version = "0.7.3", features = ["small_rng"] }

# [[bench]]
# name = "benches"
# harness = false # Using criterion
