[package]
name = "kvs-server"
version = "0.3.0"
authors = ["Carter Green <cartergr@usc.edu>"]
edition = "2018"

[dependencies]
clap = "2.33"
kvs = { path = "../core", features = [ "sled_engine" ] }
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"
bincode = "1.2.1"
crossbeam-queue = "0.2.2"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
